<resources>
    <string name="app_name">Pomidoro</string>
    <string name="motivationText">Принимайся за работу</string>
    <string name="targetText">Выбери цель</string>
    <string name="timeLeftText">00 : 00</string>
    <string name="startButtonText">Поехали!</string>
    <string name="loseButtonText">Уже сдаешься?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_time_string">Work time</string>
    <string name="rest_time_string">Rest time</string>
    <string name="time_15">15</string>
    <string name="time_25">25</string>
    <string name="time_30">30</string>
    <string name="goal_title_string">Цель</string>
    <string name="goal_hint_string">Введите название цели</string>
</resources>